--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/public/pizza_world_pic.png" /> 
+    <link rel="icon" type="image/x-icon" href="/pizza_world_pic.png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pizza World</title>
   </head>
