--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/pizza_world_pic.png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizza World</title>
+    <title>Pizza World Porterville</title>
   </head>
   <body>
     <div id="root"></div>
